# organizer-app/server/api/v1/meetings/[id].ts
@@ -1,0 +1,2 @@
+import { makeCrudItemHandler } from '~/server/utils/apiCrud'
+export default makeCrudItemHandler({ collection: 'meetings' })
