# organizer-app/server/api/v1/meetings/index.ts
@@ -1,0 +1,2 @@
+import { makeCrudListCreate } from '~/server/utils/apiCrud'
+export default makeCrudListCreate({ collection: 'meetings' })
