# organizer-app/server/api/v1/teams/[id].ts
@@ -1,0 +1,2 @@
+import { makeCrudItemHandler } from '~/server/utils/apiCrud'
+export default makeCrudItemHandler({ collection: 'teams' })
